--- a/exercicios/ex027/flex011/index.html
+++ b/exercicios/ex027/flex011/index.html
@@ -15,19 +15,30 @@
             background-color: lightskyblue;
             border: 1px solid black;
             text-align: center;
-            flex-basis: 250px;
-            flex-shrink: 1;
+            flex-basis: 200px;
         }
-        #i1 { flex-grow: 0 }
-        #i2 { flex-grow: 1 }
-        #i3 { flex-grow: 1 }
+
+        div#cxA {
+            flex-shrink: 0;
+            flex-grow: 1;     
+        }
+
+        div#cxB {
+            flex-shrink: 1;
+            flex-grow: 1;
+        }
+
+        div#cxC {
+            flex-shrink: 8;
+            flex-grow: 1;
+        }
     </style>
 </head>
 <body>
     <div class="conteiner">
-        <div class="item" id="i1">A</div>
-        <div class="item" id="i2">B</div>
-        <div class="item" id="i3">C</div>
+        <div class="item" id="cxA">A</div>
+        <div class="item" id="cxB">B</div>
+        <div class="item" id="cxC">C</div>
     </div>    
 </body>
 </html>
