--- a/exercicios/ex028/grid04/index.html
+++ b/exercicios/ex028/grid04/index.html
@@ -7,12 +7,15 @@
     <style>
         div.container {
             border: 3px solid blue;
-            height: 500px;
             display: grid;
-            grid-template: repeat(3, auto) / repeat(3, auto);
+            grid-template-rows: repeat(3, 80px);
+            grid-template-columns: repeat(3, 1fr);
+            grid-auto-flow: row;
+            grid-auto-rows: 80px;
+            grid-auto-columns: 120px;
             gap: 10px;
-            place-items: start center;
-            place-content: space-between end;
+            place-items: normal normal;
+            place-content: normal normal;
         }
         div.item {
             border: 3px solid red;
@@ -30,6 +33,7 @@
         <div class="item">F</div>
         <div class="item">G</div>
         <div class="item">H</div>
+        <div class="item">I</div>
     </div>    
 </body>
 </html>
